Feat: Add env update interface
